--- a/PhoneList/PhoneList/PhoneList.csproj
+++ b/PhoneList/PhoneList/PhoneList.csproj
@@ -174,9 +174,26 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\DataModel\DataAdress.cs" />
+    <Compile Include="Models\DataModel\DataCity.cs" />
+    <Compile Include="Models\DataModel\DataCountry.cs" />
+    <Compile Include="Models\DataModel\DataPerson.cs" />
+    <Compile Include="Models\DataModel\DataPhone.cs" />
+    <Compile Include="Models\DataModel\DataUser.cs" />
+    <Compile Include="Models\EntityContexts\EntityContext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\IdentityModels\Adress.cs" />
+    <Compile Include="Models\IdentityModels\Person.cs" />
+    <Compile Include="Models\IdentityModels\Phone.cs" />
+    <Compile Include="Models\IdentityModels\User.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\ViewModels\AdressViewModel.cs" />
+    <Compile Include="Models\ViewModels\PersonViewModel.cs" />
+    <Compile Include="Models\ViewModels\PhoneViewModel.cs" />
+    <Compile Include="Models\ViewModels\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\EntityRepository.cs" />
+    <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
