[~] few changes i don't remember actually)))

--- a/PhoneList/PhoneList/PhoneList.csproj
+++ b/PhoneList/PhoneList/PhoneList.csproj
@@ -218,6 +218,7 @@
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Main\Cabinet.cshtml" />
+    <Content Include="Views\Main\CreatePerson.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Base\" />
