--- a/PhoneList/PhoneList/PhoneList.csproj
+++ b/PhoneList/PhoneList/PhoneList.csproj
@@ -183,6 +183,7 @@
     </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\addressbook_g.png" />
     <Content Include="Content\Images\default.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
